<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical">

    <!-- The ActionBar displayed at the top -->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/text_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_view_instruction_margin"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/text_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_view_instruction_margin"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/text_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_view_instruction_margin"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
        android:id="@+id/button_submit"
        style="@style/CustomRaisedButton"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/btn_submit" />
    </ScrollView>

</LinearLayout>
