<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical">

    <!-- The ActionBar displayed at the top -->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_view_instruction_margin"
        android:text="@string/inst_forgot_password"
        android:textSize="@dimen/text_view_instruction_text_size" />

    <EditText
        android:id="@+id/text_employee_id_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_view_instruction_margin"
        android:hint="@string/name"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_reset"
            style="@style/CustomRaisedButton"
            android:layout_gravity="bottom|right"
            android:layout_margin="@dimen/button_margin"
                        android:text="@string/btnResetPassword" />
    </ScrollView>

</LinearLayout>