<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.weserv.grumpy.assetracker.UI.GetAssetTagActivity">


    <!-- The ActionBar displayed at the top -->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height= "wrap_content"
        android:textSize="@dimen/abc_text_size_small_material"
        android:text="@string/inst_get_asset_tag"
        android:layout_margin="10dp"
        android:id="@+id/get_asset_label_inst"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:hint="@string/hint_asset_tag"
            android:id="@+id/get_asset_asset_tag"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            />

        <Button
            android:layout_height="wrap_content"
            style="@style/CustomRaisedButton"
            android:id="@+id/get_asset_accept"
            android:text="@string/accept"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/get_asset_asset_tag"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/get_asset_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:elevation="4dp"
            android:layout_margin="16dp"
            android:src="@drawable/icon_scan"
            />


    </RelativeLayout>




</LinearLayout>
